// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Connection Problems отображается корректно 1`] = `
<div
  className="alert alert-danger"
>
  Произошла ошибка при попытке получить данные
  <button
    className="btn ml-auto"
    onClick={[Function]}
  >
    Повторить попытку получить данные
  </button>
</div>
`;

exports[`Loaded with problems отображается корректно 1`] = `
<div
  className="row"
>
  <div
    className="col"
  >
    <div
      className="alert alert-danger"
    >
      Произошла ошибка при попытке получить местоположение, отображен город по умолчанию
      <button
        className="btn ml-auto"
        onClick={[Function]}
      >
        Повторить попытку получить местоположение
      </button>
    </div>
    <h2>
      Moscow
    </h2>
    <div
      className="row"
    >
      <div
        className="col"
      >
        <img
          alt="icon"
          src="https://openweathermap.org/img/wn/01n@2x.png"
        />
      </div>
      <div
        className="col"
      >
        <p
          style={
            Object {
              "fontSize": "3.9vw",
            }
          }
        >
          277.37
          ˚C 
        </p>
      </div>
    </div>
  </div>
  <div
    className="col"
  >
    <WeatherPack
      serverInfo={
        Object {
          "base": "stations",
          "clouds": Object {
            "all": 0,
          },
          "cod": 200,
          "coord": Object {
            "lat": 55.75,
            "lon": 37.62,
          },
          "dt": 1569349865,
          "id": 524901,
          "main": Object {
            "humidity": 86,
            "pressure": 1017,
            "temp": 277.37,
            "temp_max": 278.15,
            "temp_min": 276.48,
          },
          "name": "Moscow",
          "sys": Object {
            "country": "RU",
            "id": 9029,
            "message": 0.0065,
            "sunrise": 1569295059,
            "sunset": 1569338749,
            "type": 1,
          },
          "timezone": 10800,
          "visibility": 10000,
          "weather": Array [
            Object {
              "description": "clear sky",
              "icon": "01n",
              "id": 800,
              "main": "Clear",
            },
          ],
          "wind": Object {
            "deg": 240,
            "speed": 2,
          },
        }
      }
    />
  </div>
</div>
`;

exports[`Loaded отображается корректно 1`] = `
<div
  className="row"
>
  <div
    className="col"
  >
    <h2>
      Moscow
    </h2>
    <div
      className="row"
    >
      <div
        className="col"
      >
        <img
          alt="icon"
          src="https://openweathermap.org/img/wn/01n@2x.png"
        />
      </div>
      <div
        className="col"
      >
        <p
          style={
            Object {
              "fontSize": "3.9vw",
            }
          }
        >
          277.37
          ˚C 
        </p>
      </div>
    </div>
  </div>
  <div
    className="col"
  >
    <WeatherPack
      serverInfo={
        Object {
          "base": "stations",
          "clouds": Object {
            "all": 0,
          },
          "cod": 200,
          "coord": Object {
            "lat": 55.75,
            "lon": 37.62,
          },
          "dt": 1569349865,
          "id": 524901,
          "main": Object {
            "humidity": 86,
            "pressure": 1017,
            "temp": 277.37,
            "temp_max": 278.15,
            "temp_min": 276.48,
          },
          "name": "Moscow",
          "sys": Object {
            "country": "RU",
            "id": 9029,
            "message": 0.0065,
            "sunrise": 1569295059,
            "sunset": 1569338749,
            "type": 1,
          },
          "timezone": 10800,
          "visibility": 10000,
          "weather": Array [
            Object {
              "description": "clear sky",
              "icon": "01n",
              "id": 800,
              "main": "Clear",
            },
          ],
          "wind": Object {
            "deg": 240,
            "speed": 2,
          },
        }
      }
    />
  </div>
</div>
`;

exports[`Loading отображается корректно 1`] = `
<div>
  <div
    className="row"
  >
    <div
      className="col text-center"
    >
      <h2>
        Происходит загрузка, подождите
      </h2>
      <div
        className="spinner-border text-success"
        role="status"
      >
        <span
          className="sr-only"
        >
          Loading...
        </span>
      </div>
    </div>
  </div>
</div>
`;
